Updates to support Spack

--- a/GMAO_stoch/CMakeLists.txt
+++ b/GMAO_stoch/CMakeLists.txt
@@ -15,8 +15,6 @@ include_directories (${include_NCEP_sfcio})
 include_directories (${include_GMAO_hermes})
 include_directories (${include_GMAO_transf})
 include_directories (${include_GMAO_mpeu})
-include_directories (${INC_NETCDF})
-include_directories (${INC_ESMF})
 include_directories (${include_NCEP_sp_r4i4})
 include_directories (${include_${this}})
 
@@ -47,7 +45,7 @@ set (srcs
 
  esma_add_library(${this}
    SRCS ${srcs}
-   DEPENDENCIES GMAO_mpeu GMAO_gfio_r8 GMAO_transf MAPL NCEP_sfcio NCEP_sp_r4i4
+   DEPENDENCIES GMAO_mpeu GMAO_gfio_r8 GMAO_transf MAPL NCEP_sfcio NCEP_sp_r4i4 esmf NetCDF::NetCDF_Fortran
    )
 set_target_properties (${this} PROPERTIES Fortran_MODULE_DIRECTORY ${include_${this}})
 
