install mk_SurfaceRestarts.pl

--- a/GEOS_Util/post/CMakeLists.txt
+++ b/GEOS_Util/post/CMakeLists.txt
@@ -45,6 +45,7 @@ set (perlscripts
   g5fcst_stats.pl
   ncep2geos.pl
   regrid.pl
+  mk_SurfaceRestarts.pl
   )
 install(
    PROGRAMS ${perlscripts} ec2grd.csh
