Update CMake in ADAS-only subdirs

--- a/GMAO_ncdiag/nc_diag_read/CMakeLists.txt
+++ b/GMAO_ncdiag/nc_diag_read/CMakeLists.txt
@@ -7,8 +7,8 @@ set (SRCS
   )
 
 esma_add_library (${this}
-  SRCS ${SRCS}
-  INCLUDES ${INC_NETCDF}
+  SRCS ${SRCS} 
+  DEPENDENCIES NetCDF::NetCDF_Fortran
   )
 
 target_compile_definitions (${this} PRIVATE _REAL8_ ERROR_TRACEBACK)
