--- a/GEOS_Util/post/tests/c24Toc12.yaml
+++ b/GEOS_Util/post/tests/c24Toc12.yaml
@@ -26,7 +26,7 @@ output:
     bcs_dir: /discover/nobackup/projects/gmao/share/gmao_ops/fvInput/g5gcm/bcs/Icarus-NLv3/Icarus-NLv3_Reynolds//CF0012x6C_DE0360xPE0180/
     expid: hello
     ogrid: 360X180
-    out_dir: /gpfsm/dnb32/wjiang/remap_c24Toc12/
+    out_dir: /home/wjiang/swdev/github/GEOSgcm_newRegrid/install/bin/remap_c24Toc12/
   air:
     nlevel: '72'
   surface:
@@ -41,4 +41,4 @@ output:
 slurm:
   account: g0610
   qos: debug
-  partition: hasw
+  constraint: hasw
