--- a/GEOS_Util/post/tests/CMakeLists.txt
+++ b/GEOS_Util/post/tests/CMakeLists.txt
@@ -1,5 +1,5 @@
 
-file(GLOB test_scripts CONFIGURE_DEPENDS ./*.*)
+file(GLOB test_scripts CONFIGURE_DEPENDS ./*.py ./*.yaml)
 install(
    PROGRAMS ${test_scripts} 
    DESTINATION bin)
