--- a/GEOS_Util/plots/grads_util/plot.rc
+++ b/GEOS_Util/plots/grads_util/plot.rc
@@ -633,6 +633,7 @@ DUDTDYN_DYN_250_CLEVS:  -7 -6 -5 -4 -3 -2 -1.5 -1 -0.5 0.5 1 1.5 2 3 4 5 6 7
 DUDTDYN_DYN_200_CLEVS:  -7 -6 -5 -4 -3 -2 -1.5 -1 -0.5 0.5 1 1.5 2 3 4 5 6 7
 DUDTDYN_DYN_150_CLEVS:  -7 -6 -5 -4 -3 -2 -1.5 -1 -0.5 0.5 1 1.5 2 3 4 5 6 7
 DUDTDYN_DYN_100_CLEVS:  -7 -6 -5 -4 -3 -2 -1.5 -1 -0.5 0.5 1 1.5 2 3 4 5 6 7
+DUDTDYN_DYN_CLEVS:  -18 -16 -14 -12 -10 -8 -6 -4 -2 2 4 6 8 10 12 14 16 18
 
 *DUDTDYN_DYN_FIXED_PLOT_FACTOR: -2
 *DUDTDYN_DYN_FIXED_PLOT_CINT: 1.2
@@ -729,6 +730,7 @@ DUDTPHY_MOIST_250_CLEVS:  -7 -6 -5 -4 -3 -2 -1.5 -1 -0.5 0.5 1 1.5 2 3 4 5 6 7
 DUDTPHY_MOIST_200_CLEVS:  -7 -6 -5 -4 -3 -2 -1.5 -1 -0.5 0.5 1 1.5 2 3 4 5 6 7
 DUDTPHY_MOIST_150_CLEVS:  -7 -6 -5 -4 -3 -2 -1.5 -1 -0.5 0.5 1 1.5 2 3 4 5 6 7
 DUDTPHY_MOIST_100_CLEVS:  -7 -6 -5 -4 -3 -2 -1.5 -1 -0.5 0.5 1 1.5 2 3 4 5 6 7
+DUDTPHY_MOIST_CLEVS:  -18 -16 -14 -12 -10 -8 -6 -4 -2 2 4 6 8 10 12 14 16 18
 
 DVDTPHY_MOIST_TITLE: DVDT from Physics (MOIST+TURB+GWD) (m/sec/day)
 DVDTPHY_MOIST_FACTOR: 86400
@@ -799,6 +801,7 @@ DUDTTOT_MOIST_CCOLS:    55  49  47  45  44  36  34  33  32  0  21  22  23  24  2
 DUDTTOT_MOIST_CLEVS:   -0.9 -0.8 -0.7 -0.6 -0.5 -0.4 -0.3 -0.2 -0.1 0.1 0.2 .3 .4 .5 .6 .7 .8 .9
 DUDTTOT_MOIST_Z_CCOLS:  55  49  47  45  44  36  34  33  32  0  21  22  23  24  25  26  27  28 69
 DUDTTOT_MOIST_Z_CLEVS: -0.9 -0.8 -0.7 -0.6 -0.5 -0.4 -0.3 -0.2 -0.1 0.1 0.2 .3 .4 .5 .6 .7 .8 .9
+DUDTTOT_MOIST_CLEVS:  -4.5 -4 -3.5 -3 -2.5 -2 -1.5 -1 -.5 .5 1 1.5 2 2.5 3 3.5 4 4.5
 
 
 DVDTTOT_MOIST_TITLE: DVDT_TOT (Dynamics + Physics [+ Analysis]) (m/sec/day)
