--- a/GEOS_Util/post/tests/test_remap_cases.yaml
+++ b/GEOS_Util/post/tests/test_remap_cases.yaml
@@ -4,4 +4,13 @@ c24Toc12:
 f522Toc360:
   base_line: '/discover/nobackup/projects/gmao/SIteam/Remapping_Test_Cases/f522Toc360/baseline/'
   config: 'f522Toc360.yaml'
-  
+amip_c180Toc90:
+  base_line: '/discover/nobackup/projects/gmao/SIteam/Remapping_Test_Cases/amip_c180Toc90/baseline/'
+  config: 'amip_c180Toc90.yaml' 
+c180Toc360:
+  base_line: '/discover/nobackup/projects/gmao/SIteam/Remapping_Test_Cases/c180Toc360/baseline/'
+  config: 'c180Toc360.yaml'
+c360Toc24:
+  base_line: '/discover/nobackup/projects/gmao/SIteam/Remapping_Test_Cases/c360Toc24/baseline/'
+  config: 'c360Toc24.yaml'
+
