--- a/GEOS_Util/post/tests/f522Toc360.yaml
+++ b/GEOS_Util/post/tests/f522Toc360.yaml
@@ -19,7 +19,7 @@ input:
     zoom: '8'
     wemin: '26'
     catch_model: catch
-
+    catch_tilefile: null
 output:
   shared:
     agrid: C360
@@ -36,6 +36,7 @@ output:
     wemin: '13'
     remap_catch: true
     remap_water: true
+    catch_tilefile: null
   analysis:
     bkg: true
     aqua: true
