Add catch_tilefile: null

--- a/GEOS_Util/post/tests/c24Toc12.yaml
+++ b/GEOS_Util/post/tests/c24Toc12.yaml
@@ -20,7 +20,7 @@ input:
     wemin: '13'
     # it supports three models: catch, catchcnclm40, catchcnclm45
     catch_model: catch
-
+    catch_tilefile: null
 output:
   shared:
     agrid: C12
@@ -29,14 +29,18 @@ output:
     ogrid: 360X180
     out_dir: $NOBACKUP/REMAP_TESTS/c24Toc12/
   air:
+    # remap upper air or not
     remap: true
     nlevel: '72'
   surface:
     split_saltwater: true
     surflay: 50.0
     wemin: '13'
+    # remap lake, saltwater, landicet
     remap_water: true
+    # remap catch(cn)
     remap_catch: true
+    catch_tilefile: null
   analysis:
     bkg: false
     aqua: true
