--- a/GEOS_Util/post/tests/s2sToc12MOM6.yaml
+++ b/GEOS_Util/post/tests/s2sToc12MOM6.yaml
@@ -19,7 +19,7 @@ input:
     wemin: '26'
     # it supports three models: catch, catchcnclm40, catchcnclm45
     catch_model: catch
-
+    catch_tilefile: null
 output:
   shared:
     agrid: C12
@@ -39,6 +39,7 @@ output:
     remap_water: true
     # remap catch(cn)
     remap_catch: true
+    catch_tilefile: null
   analysis:
     bkg: false
     aqua: true
