Make GMAO_etc depend on GMAO_perllib

--- a/GMAO_perllib/CMakeLists.txt
+++ b/GMAO_perllib/CMakeLists.txt
@@ -1,3 +1,10 @@
+esma_set_this()
+
+# add a dummy target so that GMAO_etc can depend
+# on GMAO_perllib
+
+add_custom_target(${this} ALL)
+
 set(perldirs
    ESMA
    GrADS
