--- a/GMAO_etc/obsys-nccs-gaas.rc
+++ b/GMAO_etc/obsys-nccs-gaas.rc
@@ -17,6 +17,8 @@
 # Modification History:
 # ---------------------
 # 11Nov2013  Stassi     Initial version
+# 07Oct2022  Todling    Add LLK for a couple of classes to adjust for initial data
+#                       template (FLK) vs changed template (LLK).
 #
 #=======================================================================
 
@@ -32,6 +34,9 @@ END
 # MODIS Terra Level2 Data
 #------------------------
 BEGIN mod04_061_flk => MOD04_L2.A%y4%j3.%h2%n2.061.NRT.hdf
+  20171101_00z-21001231_18z 000500 /discover/nobackup/projects/gmao/input/dao_ops/ops/flk/modis/061/MOD04/%y4/%j3/MOD04_L2.A%y4%j3.%h2%n2.061.%y4%j3%c%c%c%c%c%c.NRT.hdf
+END
+BEGIN mod04_061_llk => MOD04_L2.A%y4%j3.%h2%n2.061.NRT.hdf
   20171101_00z-21001231_18z 000500 /discover/nobackup/projects/gmao/input/dao_ops/ops/flk/modis/061/MOD04/%y4/%j3/MOD04_L2.A%y4%j3.%h2%n2.061.NRT.hdf
 END
 BEGIN mod04_061_arc => MOD04_L2.A%y4%j3.%h2%n2.061.NRT.hdf
@@ -75,6 +80,9 @@ END
 # MODIS Aqua Level2 Data
 #-----------------------
 BEGIN myd04_061_flk => MYD04_L2.A%y4%j3.%h2%n2.061.NRT.hdf
+  20171101_00z-21001231_18z 000500 /discover/nobackup/projects/gmao/input/dao_ops/ops/flk/modis/061/MYD04/%y4/%j3/MYD04_L2.A%y4%j3.%h2%n2.061.%y4%j3%c%c%c%c%c%c.NRT.hdf
+END
+BEGIN myd04_061_llk => MYD04_L2.A%y4%j3.%h2%n2.061.NRT.hdf
   20171101_00z-21001231_18z 000500 /discover/nobackup/projects/gmao/input/dao_ops/ops/flk/modis/061/MYD04/%y4/%j3/MYD04_L2.A%y4%j3.%h2%n2.061.NRT.hdf
 END
 BEGIN myd04_061_arc => MYD04_L2.A%y4%j3.%h2%n2.061.NRT.hdf
@@ -121,6 +129,10 @@ END
 
 # AERONET Data
 #-------------
-BEGIN aeronet_obs => aeronet.obs.%y4%m2%d2.ods
-  19990101_00z-20150930_00z 240000 /archive/input/dao_ops/obs/reanalysis/aeronet/ods/Y%y4/M%m2/aeronet.obs.%y4%m2%d2.ods
+BEGIN aeronet_obs_flk => aeronet.obs.%y4%m2%d2_%h2z.ods
+  20220208_00z-21000101_00z 030000 /discover/nobackup/dao_ops/intermediate/flk/stage/aeronet/aeronet.obs.%y4%m2%d2_%h2z.ods
+END
+BEGIN aeronet_obs_llk => aeronet.obs.%y4%m2%d2_%h2z.ods
+  19950317_18z-20211231_21z 030000 /discover/nobackup/projects/gmao/input/dao_ops/ops/reanalysis/aerosol/data/AERONET.v3/Level2/ODS/Y%y4/M%m2/aeronet.obs.%y4%m2%d2_%h2z.ods
+  20220101_00z-21000101_00z 030000 /discover/nobackup/dao_ops/intermediate/flk/stage/aeronet/aeronet.obs.%y4%m2%d2_%h2z.ods
 END
