--- a/GEOS_Util/post/CMakeLists.txt
+++ b/GEOS_Util/post/CMakeLists.txt
@@ -28,7 +28,7 @@ ecbuild_add_executable (TARGET binarytile.x SOURCES binarytile.F90)
 ecbuild_add_executable (TARGET rs_numtiles.x SOURCES rs_numtiles.F90)
 ecbuild_add_executable (TARGET rs_vinterp.x SOURCES rs_vinterp.F90)
 ecbuild_add_executable (TARGET rs_vinterp_scm.x SOURCES rs_vinterp_scm.F90)
-ecbuild_add_executable (TARGET new_time_ave.x SOURCES new_time_ave.F90)
+ecbuild_add_executable (TARGET time_ave_util.x SOURCES time_ave_util.F90)
 
 ecbuild_add_executable (TARGET stats.x SOURCES stats.F90)
 if (DISABLE_FIELD_WIDTH_WARNING)
@@ -98,7 +98,7 @@ target_link_libraries (flat2hdf.x post_nompi GMAO_gfio_r4)
 target_link_libraries (gg2fv.x post)
 target_link_libraries (rs2hdf.x post)
 target_link_libraries (time_ave.x ${this} GMAO_gfio_r4 MAPL )
-target_link_libraries (new_time_ave.x ${this} GMAO_gfio_r4 MAPL )
+target_link_libraries (time_ave_util.x ${this} MAPL )
 target_link_libraries (3CH_mpi.x ${this} GMAO_gfio_r4 MPI::MPI_Fortran)
 
 target_link_libraries (rsg3_vinterp.x ${this} GMAO_hermes)
