--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -3,16 +3,18 @@
 # Order is important; the last matching pattern takes the most
 # precedence.
 
-# Both ADAS and GCM should be notified of changes in GMAO_Shared
-* @GEOS-ESM/adas-gatekeepers @GEOS-ESM/gcm-gatekeepers
+# The ADAS is now the primary gatekeeper
+* @GEOS-ESM/adas-gatekeepers
 
 # Cmake team manages the circleci and github dirs
 /.circleci/ @GEOS-ESM/cmake-team
 /.github/   @GEOS-ESM/cmake-team
 
-# GEOS_Shared has files that the Land Team also cares 
-# about (surfacelayer, etc.).
+# GEOS_Shared has files that the GCM and Land Team care about
 /GEOS_Shared/ @GEOS-ESM/adas-gatekeepers @GEOS-ESM/gcm-gatekeepers @GEOS-ESM/land-team
 
+# LANL_Shared is seaice territory
+/LANL_Shared/ @GEOS-ESM/adas-gatekeepers @GEOS-ESM/seaice-team
+
 # The GEOS CMake Team should also see CMakeLists.txt files in this repository
-CMakeLists.txt @GEOS-ESM/cmake-team @GEOS-ESM/adas-gatekeepers @GEOS-ESM/gcm-gatekeepers
+CMakeLists.txt @GEOS-ESM/cmake-team @GEOS-ESM/adas-gatekeepers
