--- a/LANL_Shared/CICE4/CMakeLists.txt
+++ b/LANL_Shared/CICE4/CMakeLists.txt
@@ -46,7 +46,11 @@ set (srcs
   source/ice_work.F90
   )
 
-esma_add_library(${this} SRCS ${srcs} DEPENDENCIES MAPL)
+esma_add_library(${this}
+                 SRCS ${srcs}
+                 DEPENDENCIES MAPL
+                 TYPE SHARED
+                 )
 
 target_compile_definitions (${this} PRIVATE coupled GEOS MODIFY_TOPOGRAPHY USE_R8)
 
