sync obs sys w/ fp; revise util progs

--- a/GMAO_hermes/CMakeLists.txt
+++ b/GMAO_hermes/CMakeLists.txt
@@ -44,6 +44,7 @@ if ( NOT HERMES_LIGHT )
    ecbuild_add_executable (TARGET dyn2drs.x        SOURCES dyn2drs.f90        LIBS ${this})
    ecbuild_add_executable (TARGET dyn2dyn.x        SOURCES dyn2dyn.f90        LIBS ${this})
    ecbuild_add_executable (TARGET dyn_boot.x       SOURCES dyn_boot.f90       LIBS ${this})
+   ecbuild_add_executable (TARGET dyn_hydro.x      SOURCES dyn_hydro.f90      LIBS ${this})
    ecbuild_add_executable (TARGET dyn2prs.x        SOURCES dyn2prs.f90        LIBS ${this})
    ecbuild_add_executable (TARGET dyn2rs5.x        SOURCES dyn2rs5.f90        LIBS ${this})
    ecbuild_add_executable (TARGET dyn52dyn.x       SOURCES dyn52dyn.f90       LIBS ${this})
